# dlltest

./: .appveyor.yml  CMakeLists.txt  appveyor.yml  build-nmake.bat  build.sh  cmake-help.bat  mingw-msvc.bat  mingw.bat  msvc.bat  nmake.bat
.ci/: appveyor-build.bat
src/: foo.c  foo.h  foo.rc  test.c
test/: CMakeLists.txt  test2.c
toolchains/: mingw-cross.cmake  mingw64-cross.cmake
